✨ SonarQube code improvements