@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -19,6 +18,6 @@ public class PublicService {
         return courseRepository.findAll()
                 .stream()
                 .map(Course::convert)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
